hashivault: refactor dependency injection, separate tests